# Connect4_Game

./: CMakeLists.txt  README.md
analysed files/: StaticAnalysedData.txt  gprofAnalysed1.txt  gprofSummary.txt  output.txt
include/: Board.hpp  BoardInterface.hpp  Computer.hpp  FriendPlayer.hpp  GameManager.hpp  Player.hpp
src/: Board.cpp  Computer.cpp  FriendPlayer.cpp  GameManager.cpp  Player.cpp
test/: BoardTest.cpp  CMakeLists.txt  ComputerTest.cpp  FriendPlayerTest.cpp  PlayerTest.cpp  maintest.cpp  testresult.txt  testresult1.txt  testresult3.txt
